--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -36,23 +36,29 @@
     <div class="navbar-nav ml-auto">
       <a class="nav-link" href="#">О себе</a>
       <a class="nav-link" href="#">Мой VK</a>
-      <a class="nav-link" href="#">Блог</a>
+      <a class="nav-link active" href="#">Блог</a>
     </div>
   </div>
 </nav>
-<main role="main" class="pl-4">
-<h2 class="pt-5 pl-1">Недавние посты:</h2>
-  {% for post in posts %}
-  <br/>
-  <img src="{{ post.image.url }}" height=400 width=400 class="img-fluid">
-  <br/>
-  <a href=" "><h3>{{ post.title }}</h3></a>
-  <p>{{ post.get_summary }}</p>
+<main role="main" class="pl-1">
+ <div class="container">
+   <div class="row">
+      <div class="col-md-6">
+        <h2 class="pt-5 pb-3">Недавние посты:</h2>
+        {% for post in posts %}
+        <a href=" "><h3>{{ post.title }}</h3></a>
+        <br/>
+        <img src="{{ post.image.url }}" height=400 width=400 class="img-fluid">
+        <br/><br/>
+        <p>{{ post.get_summary }}</p>
+        {{ post.date }}
+        <br/>
+        <br/>
+        {% endfor %}
+      </div>
+   </div>
+ </div>
 
-  {{ post.date }}
-  <br/>
-  <br/>
-  {% endfor %}
 </main>
 
 
